--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "tcg/voyager": "^1.4"
