--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "barryvdh/laravel-dompdf": "^0.8.6",
+        "barryvdh/laravel-snappy": "^0.4.8",
         "crockett/csv-seeder": "^1.1",
         "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.0",
         "freshwork/chilean-bundle": "^2.1",
+        "h4cc/wkhtmltopdf-i386": "0.12.x",
         "laravel/framework": "^6.2",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
